[gd_scene load_steps=6 format=2]

[ext_resource path="res://items/guns/laser/laser.gd" type="Script" id=1]
[ext_resource path="res://assets/bosses/lud_ship_cloud.png" type="Texture" id=2]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0.0197044, 0.977478 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.166667 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0.00985222, 0.972973 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.202703 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.962388 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.318243 ), 0.0, 0.0, 0, 0 ]

[node name="Laser" type="RayCast2D" groups=["player_bullet"]]
enabled = true
cast_to = Vector2( 1000, 0 )
collision_mask = 2
collide_with_areas = true
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 30, 0 )
default_color = Color( 0.85098, 0.968627, 0.509804, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Tween" type="Tween" parent="."]

[node name="MuzzleCPUParticles2D" type="CPUParticles2D" parent="."]
amount = 14
lifetime = 0.4
texture = ExtResource( 2 )
spread = 55.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
scale_amount = 0.6
scale_amount_curve = SubResource( 1 )
color = Color( 0.85098, 0.968627, 0.509804, 1 )

[node name="CollisionCPUParticles2D" type="CPUParticles2D" parent="."]
amount = 14
lifetime = 0.4
texture = ExtResource( 2 )
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
scale_amount = 0.6
scale_amount_curve = SubResource( 2 )
color = Color( 0.945098, 0.968627, 0.509804, 1 )

[node name="BoxCPUParticles2D" type="CPUParticles2D" parent="."]
amount = 30
lifetime = 0.4
local_coords = false
texture = ExtResource( 2 )
emission_shape = 2
emission_rect_extents = Vector2( 1, 1 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 15.0
scale_amount = 0.1
scale_amount_curve = SubResource( 3 )
color = Color( 0.945098, 0.968627, 0.509804, 1 )
